--- a/midwares/koa2-simple-static/package.json
+++ b/midwares/koa2-simple-static/package.json
@@ -6,12 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "luoxifeng",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.5.7",
-    "koa": "^2.3.0",
-    "koa-logger": "^3.0.1",
-    "koa-views": "^6.0.2"
+    "async-file": "^2.0.2"
   }
 }
