--- a/midwares/koa2-simple-static/demo/package.json
+++ b/midwares/koa2-simple-static/demo/package.json
@@ -4,7 +4,8 @@
   "description": "node static files midware",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "luoxifeng",
   "license": "ISC",
